Refactor app structure and add ESLint with Angular support
Removed server-side files and refactored the app to a client-only Angular structure. Added user login and registration form components. Integrated Angular Material and ESLint with Angular and TypeScript support, updating configuration files accordingly.

--- a/angular.json
+++ b/angular.json
@@ -28,19 +28,14 @@
             ],
             "styles": [
               "src/styles.scss"
-            ],
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            ]
           },
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
+                  "maximumWarning": "600kB",
                   "maximumError": "1MB"
                 },
                 {
@@ -89,11 +84,23 @@
               "src/styles.scss"
             ]
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "67f05833-a6e2-440c-bb61-f02059fcdb7f"
+    "analytics": "67f05833-a6e2-440c-bb61-f02059fcdb7f",
+    "schematicCollections": [
+      "angular-eslint"
+    ]
   }
 }
