Refactor app structure and add movie, profile, and dialog components
Refactored the main app component to use app.component.ts/html/scss and updated app.module.ts to declare and import new components. Added MovieCard, UserProfile, WelcomePage, MovieDetailsDialog, GenreDialog, and DirectorDialog components with their templates, styles, and specs. Implemented routing for welcome, movies, and profile pages. Updated FetchApiDataService and related usages. Improved user login, registration, and profile management flows. Updated styles and removed unused font links from index.html.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "@angular/ssr": "^20.2.1",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "@angular/build": "^20.2.1",
