--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
+    "angular-cli-ghpages": "^2.0.3",
     "angular-eslint": "20.2.0",
     "eslint": "^9.33.0",
     "jasmine-core": "~5.9.0",
