--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "ng": "ng",
     "start": "node server.js",
     "dev": "ng serve --proxy-config proxy.conf.json",
+    "dev-app": "ng serve --port 8080",
+    "proxy": "node proxy-server.js",
+    "dev-with-proxy": "concurrently \"npm run proxy\" \"npm run dev-app\"",
     "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -40,7 +43,7 @@
     "@angular/platform-server": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.1",
-    "express": "^5.1.0",
+    "axios": "^1.11.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
@@ -53,7 +56,11 @@
     "@types/node": "^20.17.19",
     "angular-cli-ghpages": "^2.0.3",
     "angular-eslint": "20.2.0",
+    "concurrently": "^9.2.1",
+    "cors": "^2.8.5",
     "eslint": "^9.33.0",
+    "express": "^5.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
