Complete Task 6.3 & 6.4: Implement responsive navigation, user authentication, and profile management
- Added complete user registration and login forms (Task 6.3)
- Implemented movie card component with routing (Task 6.4)
- Created responsive navigation bar with myFlix, Movies, Profile, Logout buttons
- Added user profile component with edit functionality
- Integrated Heroku API for movie data loading
- Fixed all navigation functionality with consistent routing
- Enhanced responsive design for mobile, tablet, and desktop
- Added comprehensive error handling and user feedback
- All 26 tests passing
- Maintained strict tutor specification compliance

--- a/angular.json
+++ b/angular.json
@@ -57,6 +57,9 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "port": 4200
+          },
           "configurations": {
             "production": {
               "buildTarget": "myFlix-Angular-client:build:production"
