Fix registration issues and enhance navigation styling
- Fixed registration form with proper validation and error handling
- Enhanced navigation bar with modern gradient design and hover effects
- Added responsive design for mobile devices
- Fixed Zone.js configuration for proper Angular runtime
- Improved user experience with better error messages
- Added polyfills.ts for proper Zone.js loading
- Updated navigation across movie-card and user-profile components

--- a/angular.json
+++ b/angular.json
@@ -19,6 +19,7 @@
           "options": {
             "outputPath": "dist/myFlix-Angular-client",
             "browser": "src/main.ts",
+            "polyfills": ["src/polyfills.ts"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
