--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "typedoc": "^0.28.12",
     "typescript-eslint": "8.40.0"
   },
   "engines": {
